# hotreload

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/shared_object/: shared_object.h
lib/src/: CMakeLists.txt  entrypoint.cpp
src/: CMakeLists.txt  main.cpp
